test/semant/negative_controls/buggy_progs/disjoint-join.con
concept test
purpose something
state
  x : Int -> Int
  y : String -> String
  z : String = x.y
actions
  a() 
principle
